# cpprussia2026_workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  min_messenger.yaml  rules_and_skills.md
.opencode/: opencode.json
.playwright-mcp/: page-2026-04-11T23-02-51-955Z.yml  page-2026-04-11T23-03-14-143Z.yml  page-2026-04-11T23-06-48-520Z.yml  page-2026-04-11T23-06-54-915Z.yml  page-2026-04-11T23-07-06-713Z.yml  page-2026-04-11T23-07-43-141Z.yml  page-2026-04-11T23-08-26-093Z.yml  page-2026-04-11T23-08-58-829Z.yml  page-2026-04-11T23-09-45-398Z.yml  page-2026-04-11T23-09-54-759Z.yml  page-2026-04-11T23-11-46-557Z.yml  page-2026-04-11T23-12-14-518Z.yml  page-2026-04-11T23-12-25-416Z.yml  page-2026-04-11T23-12-30-794Z.yml  page-2026-04-11T23-12-50-482Z.yml  page-2026-04-11T23-13-05-402Z.yml
docs/: DIRECT_MESSAGING_AUDIT.md  DIRECT_MESSAGING_PLAN.md  api_changes.md  auth-service.md  auth-service.yaml  files-service.md  files-service.yaml  messaging-service.md  messaging-service.yaml  notifications-service.md  notifications-service.yaml  reactions-service.md  reactions-service.yaml  status-service.md  status-service.yaml
docs/tmp/: auth-service-audit-v2.md  auth-service-audit.md  files-service-audit-v2.md  files-service-audit.md  messaging-service-audit-v2.md  messaging-service-audit.md  notifications-service-audit-v2.md  notifications-service-audit.md  reactions-service-audit.md  status-service-audit-v2.md  status-service-audit.md
example_impl_cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README.docker.md  README.md  docker-compose.yml
example_impl_cpp/auth_service/: CMakeLists.txt  main.cpp  static_config.yaml
example_impl_cpp/auth_service/src/: auth_handler.cpp  auth_handler.hpp  models.cpp  models.hpp  schemas.cpp  schemas.hpp
example_impl_cpp/auth_service/tests/: test_auth_handler.cpp
example_impl_cpp/files_service/: CMakeLists.txt  main.cpp  static_config.yaml
example_impl_cpp/files_service/src/: files_handler.cpp  files_handler.hpp  models.hpp  schemas.cpp  schemas.hpp
example_impl_cpp/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
example_impl_cpp/frontend/src/components/messenger/: ChatList.vue  MessageBubble.vue  MessengerLayout.vue  ReactionBar.vue  StatusIndicator.vue
example_impl_cpp/frontend/src/stores/: auth.js  chats.js
example_impl_cpp/frontend/src/views/: Login.vue  Notifications.vue  Register.vue
example_impl_cpp/frontend/tests/unit/stores/: status.test.js
example_impl_cpp/messaging_service/: CMakeLists.txt  main.cpp  static_config.yaml
example_impl_cpp/messaging_service/src/: messaging_handler.cpp  messaging_handler.hpp  models.cpp  models.hpp  schemas.cpp  schemas.hpp
example_impl_cpp/nginx/: nginx.conf
example_impl_cpp/notifications_service/: CMakeLists.txt  main.cpp  static_config.yaml
example_impl_cpp/notifications_service/src/: models.cpp  models.hpp  notifications_handler.cpp  notifications_handler.hpp  schemas.cpp  schemas.hpp
example_impl_cpp/reactions_service/: CMakeLists.txt  main.cpp  static_config.yaml
example_impl_cpp/reactions_service/src/: models.hpp  reactions_handler.cpp  reactions_handler.hpp  schemas.cpp  schemas.hpp
example_impl_cpp/status_service/: CMakeLists.txt  main.cpp  static_config.yaml
example_impl_cpp/status_service/src/: models.hpp  schemas.cpp  schemas.hpp  status_handler.cpp  status_handler.hpp
example_impl_py/: .gitignore  CHANGELOG.md  Makefile  TEST_CREDENTIALS.md  docker-compose.yml
example_impl_py/frontend/: .gitignore  package-lock.json  package.json  playwright.config.js  vite.config.js
example_impl_py/frontend/src/: App.vue  main.js  router.js
example_impl_py/frontend/src/api/: index.js
example_impl_py/services/auth-service/: requirements.txt
example_impl_py/services/files-service/: Dockerfile
example_impl_py/services/messaging-service/: requirements.txt
(+78 files in other folders)
